--- a/app/src/main/res/layout/activity_currency_list.xml
+++ b/app/src/main/res/layout/activity_currency_list.xml
@@ -11,7 +11,9 @@
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textSize="20dp"
+        />
 
     <TextView
         android:id="@+id/list"
